# BigTalkDesignPatternForCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Chapter1/: CMakeLists.txt  README.md  main.cpp  simple_factory.cpp  simple_factory.h
Chapter10/: CMakeLists.txt  README.md  main.cpp  template_method.cpp  template_method.h
Chapter12/: CMakeLists.txt  README.md  facade.cpp  facade.h  main.cpp
Chapter13/: CMakeLists.txt  README.md  builder.cpp  builder.h  main.cpp
Chapter14/: CMakeLists.txt  README.md  main.cpp  observer.cpp  observer.h
Chapter15/: CMakeLists.txt  README.md  abstract_factory.cpp  abstract_factory.h  main.cpp
Chapter16/: CMakeLists.txt  README.md  main.cpp  state.cpp  state.h
Chapter17/: CMakeLists.txt  README.md  adapter.cpp  adapter.h  main.cpp
Chapter18/: CMakeLists.txt  README.md  main.cpp  memento.cpp  memento.h
Chapter19/: CMakeLists.txt  README.md  composite.cpp  composite.h  main.cpp
Chapter2/: CMakeLists.txt  README.md  main.cpp  strategy.cpp  strategy.h
Chapter20/: CMakeLists.txt  README.md  iterator.cpp  iterator.h  main.cpp
Chapter21/: CMakeLists.txt  README.md  main.cpp  singleton.cpp  singleton.h
Chapter22/: CMakeLists.txt  README.md  bridge.cpp  bridge.h  main.cpp
Chapter23/: CMakeLists.txt  README.md  command.cpp  command.h  main.cpp
Chapter24/: CMakeLists.txt  README.md  main.cpp  responsibility_chain.cpp  responsibility_chain.h
Chapter25/: CMakeLists.txt  README.md  main.cpp  mediator.cpp  mediator.h
Chapter26/: CMakeLists.txt  README.md  flyweight.cpp  flyweight.h  main.cpp
Chapter27/: CMakeLists.txt  (+4 more)
(+27 files in other folders)
