cmake_minimum_required(VERSION 3.5)

project(big_talk_design_pattern)

# set the C++ standard to C++ 11
set(CMAKE_CXX_STANDARD 11)

# Add sub directories
add_subdirectory(Chapter1)
add_subdirectory(Chapter2)
add_subdirectory(Chapter6)
add_subdirectory(Chapter7)
add_subdirectory(Chapter8)
add_subdirectory(Chapter9)
add_subdirectory(Chapter10)
add_subdirectory(Chapter12)
add_subdirectory(Chapter13)
add_subdirectory(Chapter14)
add_subdirectory(Chapter15)
add_subdirectory(Chapter16)
add_subdirectory(Chapter17)
add_subdirectory(Chapter18)
add_subdirectory(Chapter19)
add_subdirectory(Chapter20)
add_subdirectory(Chapter21)
